--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "babel-plugin-import": "^1.13.3",
+    "bootstrap-icons": "^1.3.0",
     "core-js": "^3.6.5",
+    "vant": "^2.5.9",
     "vue": "^2.6.11",
+    "vue-jsonp": "^2.0.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
